<resources>
    <string name="app_name">BeatBuddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login_intro">Log in or reate your account to vote on tracks, to start your own organisations and playlists, and to personalize your profile!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="register_intro">Please enter the following details to complete your registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="User">User</string>
    <string name="my_profile">My profile</string>
    <string name="home">Home</string>
    <string name="my_organisations">My organisations</string>
    <string name="settings">Settings</string>
    <string name="title_activity_create_organisation">Create your organisation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="key">Key</string>
    <string name="description">Description</string>
    <string name="create_playlist_as">Create playlist as</string>
    <string name="individual">Individual</string>
    <string name="organisation">Organisation</string>
    <string name="title_activity_create_playlist">Create playlist</string>
    <string name="image">Image</string>
    <string name="pick_image">Pick image</string>
    <string name="create">Create</string>
    <string name="guest">Guest</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="title_activity_add_track">Search for a track</string>
    <string name="user_no_organisations">You are not a member of any organisation</string>
    <string name="playlistImageLocation">https://teamd.azurewebsites.net/Content/img/Playlists/</string>
    <string name="organisationImageLocation">https://teamd.azurewebsites.net/Content/img/Organisations/</string>
    <string name="avatarImageLocation">https://teamd.azurewebsites.net/Content/img/Users/</string>
    <string name="playlists">Playlists</string>
    <string name="org_no_playlists">This organisation has no playlists</string>
    <string name="create_org">Create an organisation</string>
    <string name="create_playlist">Create a Playlist</string>
    <string name="queue">Queue</string>
    <string name="chat">Chat</string>
    <string name="history">History</string>
    <string name="your_playlists">Your playlists</string>
    <string name="you_are_not_logged_in">You are not logged in.</string>
    <string name="your_organisations">Your organisations</string>
    <string name="playlists_enjoy">Playlists you might enjoy</string>
    <string name="about">About</string>
    <string name="about_intro">Beatbuddy is a collaborative music platform, that will allow you to create playlists with your friends, family and more!</string>
    <string name="our_team">Our team (Team D)</string>
    <string name="this_is_us">This is us:</string>
    <string name="our_team_intro">BeatBuddy is created by a youthful bunch of coders from Antwerp, as a school project for Karel de Grote-Hogeschool.</string>
    <string name="login_chat">Log in to chat along...</string>
</resources>
