<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.OrganisationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <ImageView
            android:id="@+id/organisation_banner"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_below="@+id/toolbar"
            android:background="#666"
            android:scaleType="centerCrop"
            android:src="@drawable/header_default" />

        <ProgressBar
            android:layout_below="@+id/organisation_banner"
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/loading_playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"/>

        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_marginTop="8dp"
            android:id="@+id/swiperefresh_org"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/organisation_banner">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical"
                    android:paddingEnd="2dp"
                    android:paddingStart="2dp"
                    android:paddingTop="6dp">

                    <TextView
                        style="?android:textAppearanceSearchResultTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/playlists" />

                    <TextView
                        android:id="@+id/text_org_no_playlists"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/org_no_playlists"
                        android:visibility="gone" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list_org_playlists"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </ScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/main_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            app:menu_colorNormal="@color/colorAccent"
            app:menu_colorPressed="@color/colorAccent"
            app:menu_colorRipple="#333333">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/main_fab_create_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_group_add_24dp"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/colorAccent"
                app:fab_colorRipple="#333333"
                fab:fab_label="@string/create_playlist"
                fab:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>